refactor: simplificados e atualizados testes unitários, mapeadores e lógica de serviços para melhor cobertura e consistência